2007-06-29  Jens Granseuer  <jensgr@gmx.net>

	* actions/acme.glade:
	* gsd-media-keys-window.c: (gsd_media_keys_window_init): add a frame to
	the media popup (closes bug #451674)

2007-06-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-daemon.c: incorporate fixes from Matthias Clasen in
	bug #430889
	(gnome_settings_daemon_init): create the DBus server here.
	(gnome_settings_daemon_new): install an idle callback to initialize the
	modules.
	(init_modules_idle_cb): initialize modules and install an idle callback
	to start the modules.
	(start_modules_idle_cb): start modules here.
	(finalize): unref the DBus service.

2007-06-21  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-accessibility-keyboard.c:
	* gnome-settings-keybindings.c:
	* gnome-settings-keyboard.c:
	* gnome-settings-multimedia-keys.c:
	* gnome-settings-xrdb.c:
	* gnome-settings-daemon.c: all modules use now the new arch.

	* gnome-settings-background.c (background_callback): pass the correct
	argument to the idle callback.

2007-06-21  Matthias Clasen <mclasen@redhat.com>

	* gnome-settings-screensaver.c (gnome_settings_module_screensaver_start):
	fix spawning of gnome-screensaver.

2007-06-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-module.c (gnome_settings_module_start|_stop): return
	TRUE if the module does not implement the method. It's not an error,
	just the module does not need to implement it.

	* gnome-settings-daemon.c (gnome_settings_daemon_init): allocate memory
	for the index in the hash table.

2007-06-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-typing-break.c: converted to new arch.

	* gnome-settings-daemon.c: use new converted modules.

	* Makefile.am: removed unneeded header files.

	* factory.c (main): call g_thread_init to avoid warnings.

2007-06-18  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: remove non-existing gnome-settings-xsettings.h

2007-06-15  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-screensaver.c: