@@ -1,3 +1,11 @@
+2007-07-01  Jens Granseuer  <jensgr@gmx.net>
+
+	* factory.c: (main):
+	* gnome-settings-keybindings.c:
+	* gnome-settings-mouse.c:
+	* gnome-settings-screensaver.c: (key_toggled_cb):
+	* gnome-settings-xrdb.c: fix compiler warnings (closes bug #438152)
+
 2007-06-29  Jens Granseuer  <jensgr@gmx.net>
 
 	* actions/acme.glade:
